--- a/index.html
+++ b/index.html
@@ -8,10 +8,35 @@
     <script src="https://kit.fontawesome.com/a204cd4eb6.js" crossorigin="anonymous"></script>
     <!-- link with css -->
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsive.css">
 </head>
 <body>
-    <div>Fitness</div>
-    <div><i class="fa-solid fa-bars"></i></div>
+    <header>
+        <nav class="navbar-main">
+            <h1 id="fitness">Fitness</h1>
+            <div class="navbar-menu">
+                <button id="btn-home" class="navbar-btn">Home</button>
+                <button class="navbar-btn">Service</button>
+                <button class="navbar-btn">Contact</button>
+                <button class="navbar-btn">About</button>
+                <i id="hampbar" class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+        <!-- banner saction start here -->
+         <section>
+            <div>
+                <h1>Get body in shape & stay healthy</h1>
+                <p>A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!</p>
+                <div>
+                    <button>Join Club Now!</button>
+                    <button>Download App</button>
+                </div>
+            </div>
+            <img src="./images/Images 2.png" alt="">
+         </section>
+
+         <!-- banner saction start here -->
+    </header>
 
 </body>
 </html>
