banner done final

--- a/index.html
+++ b/index.html
@@ -48,14 +48,54 @@
                 </div>
                 <div class="banner-image">
                     <img src="./images/Images 2.png" alt="">
-                    <button class="banner-badge">
-                        <div class="circle"></div>350+<br>Video Tutorial</button>
+                    <div class="banner-badge">
+                        <div class="circle"></div>
+                        <!-- <div class="banner-badge-bg">
+                            <span class="badge-title">350+</span><span class="text-description badge-text"><br>Video Tutorial</span>
+                        </div> -->
+                        <div class="banner-badge-bg">
+                            <h2>350+</h2>
+                            <p>Video Tutorial</p>
+                        </div>
+                    </div>
                 </div>
                 
             </div>
          </section>
 
          <!-- banner saction ends here -->
+
+         <!-- Change Your Habits -->
+          <section>
+            <div class="change-habit">
+                <h1 class="text-title">Change Your Habits</h1>
+                <p class="text-description">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <div class="display-flex">
+                    <div class="change-habit-content">
+                        <img src="./images/image 3.png" alt="">
+                        <p class="text-description-bold">Movement</p>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="change-habit-content">
+                        <img src="./images/image 3.png" alt="">
+                        <p class="text-description-bold">Movement</p>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="change-habit-content">
+                        <img src="./images/image 3.png" alt="">
+                        <p class="text-description-bold">Movement</p>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="change-habit-content">
+                        <img src="./images/image 3.png" alt="">
+                        <p class="text-description-bold">Movement</p>
+                        <p class="text-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    
+                </div>
+
+            </div>
+          </section>
     </header>
 
 </body>
